--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -262,18 +262,23 @@ end</pre>
 <h1>期末總結</h1>
 <p>本學期老師幫每人抽籤分配了各兩樣cad來用，使用coppeliasim</p>
 <p><span>跟學習使用wink工具來製作影片。</span></p>
-<p><span><span style="background-color: #ffff00;">solvespace教學</span> </span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
+<p><span>從學期開始，跟著課程上到現在，也知道這學期不會像一下的課一樣大家都過，人人pass</span></p>
+<p>雖然沒有放多少心思在這門課，但也是有做作業出來，努力跟上進度</p>
+<p>也算是學到新的繪圖軟體，今後繪圖多了幾種新選擇，可以據各狀況使用</p>
+<p><span>CoppeliaSim這個軟體也是挺酷的，可以對機構進行模擬</span></p>
+<p><span>總結來說，我在這門課也是有帶走東西，學費沒白繳了</span></p>
+<p><span><span style="background-color: #ffff00;">`solvespace教學</span> </span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IFsdsiGaZPI" width="560"></iframe></span></p>
 <p><span><span style="background-color: #ffff00;">oneshape教學</span> <a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></span><span></span></p>
 <p><span> <span style="background-color: #ffff00;">CoppeliaSim</span> 操作 <a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
 <p><span style="background-color: #ffff00;">meARM作業</span></p>
-<p><img alt="" height="285" src="/images/螢幕擷取畫面 2021-12-13 094906.png" width="508"/></p>
+<p><span style="background-color: #ffff00;"><img alt="" height="423" src="/images/螢幕擷取畫面 2021-12-13 094906.png" width="754"/></span></p>
 <p>onshape繪製</p>
-<p><img alt="" height="233" src="/images/螢幕擷取畫面 2022-01-09 142915.png" width="502"/></p>
+<p><img alt="" height="368" src="/images/螢幕擷取畫面 2022-01-09 142915.png" width="792"/></p>
 <p>solvespace繪製</p>
-<p><img alt="" height="253" src="/images/螢幕擷取畫面 2022-01-09 143346.png" width="489"/></p>
+<p><img alt="" height="503" src="/images/螢幕擷取畫面 2022-01-09 143346.png" width="973"/></p>
 <p><span>對coppeliasim的使用還需下功夫了解，操作原理還不熟，所以在設定的部分花了很多時間</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9ZUWNdkNrJ8" width="560"></iframe></span></p>
 <p><span>Solvespace.</span>操作流程</p>
@@ -305,4 +310,8 @@ end</pre>
 <p><a href="/downloads/Assembly 2 - Part 1 (5).stl">/downloads/Assembly 2 - Part 1 (5).stl</a></p>
 <p><a href="/downloads/Assembly 2 - Part 1 (6).stl">/downloads/Assembly 2 - Part 1 (6).stl</a></p>
 <p><a href="/downloads/Assembly 2 - Part 1 (7).stl">/downloads/Assembly 2 - Part 1 (7).stl</a></p>
+<p></p>
+<p><span>2022.1.03課堂繪圖</span></p>
+<p><span></span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nTw0HOAOO2I" width="560"></iframe></p>
 <p></p>
