--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='solvespace教學簡介影片.html'>solvespace教學簡介影片</a><li><a href='Onshape教學簡介影片.html'>Onshape教學簡介影片</a><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='solvespace教學簡介影片.html'>solvespace教學簡介影片</a><li><a href='Onshape教學簡介影片.html'>Onshape教學簡介影片</a><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a><li><a href='W13.html'>W13</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li><a href='w4.html'>w4</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='H2.html'>H2</a></li></ul><li><a href='期末總結.html'>期末總結</a><li><a href='期末考試.html'>期末考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">H2 << <a href='H2.html'>Previous</a> <br /><h1>期末總結</h1>
+    <div id="tipue_search_content">H2 << <a href='H2.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試<br /><h1>期末總結</h1>
 <p>本學期老師幫每人抽籤分配了各兩樣cad來用，使用coppeliasim</p>
 <p><span>跟學習使用wink工具來製作影片。</span></p>
 <p><span>從學期開始，跟著課程上到現在，也知道這學期不會像一下的課一樣大家都過，人人pass</span></p>
@@ -154,9 +154,9 @@ img.add_border {
 <p><span> <span style="background-color: #ffff00;">CoppeliaSim</span> 操作 <a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
 <p><span style="background-color: #ffff00;">meARM作業</span></p>
-<p><span style="background-color: #ffff00;"><img alt="" height="423" src="./../images/螢幕擷取畫面 2021-12-13 094906.png" width="754"/></span></p>
+<p><span style="background-color: #ffff00;"><img alt="https://github.com/40923119/cad2021_final" caption="false" height="423" src="https://40923119.github.io/cad2021_hw/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-12-13%20094906.png" width="754"/></span></p>
 <p>onshape繪製</p>
-<p><img alt="" height="368" src="./../images/螢幕擷取畫面 2022-01-09 142915.png" width="792"/></p>
+<p><img alt="https://github.com/40923119/cad2021_final" caption="false" height="893" src="https://40923119.github.io/cad2021_hw/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202022-01-09%20142915.png" width="1920"/></p>
 <p>solvespace繪製</p>
 <p><img alt="" height="503" src="./../images/螢幕擷取畫面 2022-01-09 143346.png" width="973"/></p>
 <p><span>對coppeliasim的使用還需下功夫了解，操作原理還不熟，所以在設定的部分花了很多時間</span></p>
@@ -180,8 +180,8 @@ img.add_border {
 <p><span style="background-color: #ffff00;">期末作業 兩作業軟體則一繪製</span></p>
 <p><span style="background-color: #ffff00;">oneshape繪製八連桿</span></p>
 <p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">先用onshape繪製各個零件，然後組裝起來</span><br/></span></p>
-<p><img alt="" height="712" src="./../images/螢幕擷取畫面 2022-01-08 223650.png" width="1527"/></p>
-<p><img alt="" height="684" src="./../images/螢幕擷取畫面 2022-01-08 222224.png" width="1498"/></p>
+<p><img caption="false" height="712" src="https://40923119.github.io/cad2021_hw/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202022-01-08%20223650.png" width="1527"/></p>
+<p><img caption="false" height="877" src="https://40923119.github.io/cad2021_hw/images/%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202022-01-08%20222224.png" width="1920"/></p>
 <p>零件下載</p>
 <p><a href="./../downloads/Assembly 2 - Part 1 (1).stl">/downloads/Assembly 2 - Part 1 (1).stl</a></p>
 <p><a href="./../downloads/Assembly 2 - Part 1 (2).stl">/downloads/Assembly 2 - Part 1 (2).stl</a></p>
@@ -194,7 +194,7 @@ img.add_border {
 <p><span>2022.1.03課堂繪圖</span></p>
 <p><span></span></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nTw0HOAOO2I" width="560"></iframe></p>
-<p></p><br />H2 << <a href='H2.html'>Previous</a> </div>
+<br />H2 << <a href='H2.html'>Previous</a> <a href='期末考試.html'>Next</a> >> 期末考試</div>
         
     <!-- footer -->
       <div class="container">
